# CMakeList.txt : CMake project for oop_exercise_2, include source and define
# project specific logic here.
#
cmake_minimum_required (VERSION 3.8)

# Add source to this project's executable.
add_executable (oop_exercise_2 "main.cpp" "ByteString.cpp" "ByteString.h")

# TODO: Add tests and install targets if needed.
